<resources>
    <string name="app_name">Friends Chat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="storage_reference" translatable="false">gs://friends-chat-7aaed.appspot.com/images</string>
    <string name="data_base_users_reference">users</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="Dialogs_reference">Dialogs</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="send">Send</string>

    <string name="this_is_the_app_logo">this is the app logo</string>

    <string name="login">Login</string>
    <string name="don_t_have_account_register_now">Don\'t have account, Register now.</string>
  `
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re Password</string>
    <string name="register">Register</string>
    <string name="create_new_group">Create new Group</string>
    <string name="write_your_group_name">Write your group name</string>
    <string name="this_is_add_button">this is add button</string>
    <string name="user_name_image">user name image</string>
    <string name="user_email_image">user email image</string>
    <string name="logout">Logout</string>
    <string name="this_is_user_image">this is user image</string>
    <string name="date_format">d MMM yyyy, HH:mm</string>
    <string name="went_wrong">Some thing went wrong, please try again</string>
    <string name="select_join_group">Please select at least three useres to join the group.</string>
    <string name="empty_filed">Filed Empty.</string>
    <string name="group_create_success">Group created successfully</string>
    <string name="type_message">Please type a message</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="profile">Profile</string>
    <string name="enter_all_info">Enter all of your information please.</string>
    <string name="register_success">User register successfully</string>
    <string name="sign_up">SignUp</string>
    <string name="select_pic">Select Picture</string>
</resources>
